<resources>
    <string name="app_name">VIT-X Admin</string>
    <string name="verify_alumni">Verify Alumni</string>
    <string name="add_event">Add Event</string>
    <string name="select_image">Select Image</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="link">Link</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_image">Event Image</string>
    <string name="register">Register</string>
    <string name="login">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin_login">Admin Login</string>
    <string name="verify_user">Verify User</string>
</resources>